Priorizing condition over stock on book exporting, unitTestIntegration